@@ -1,3 +1,7 @@
+2015-06-14  Benno Schulenberg  <bensberg@justemail.net>
+	* src/winio.c (edit_draw): Add some debugging code to track which
+	multidata codes (for multiline regexes) get assigned to which lines.
+
 2015-06-11  Benno Schulenberg  <bensberg@justemail.net>
 	* src/winio.c (get_key_buffer): Add some debugging code to make it
 	easy to see what codes a key stroke produces.
